fixed typo About section description

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>
           <h3 style="display: inline;">Hey!</h3> <img src="assets/images/wave.png" alt="Hand Wave" style="width: 20px;">&nbsp;
           I'm a computer science graduate, from India. People say I'm a man of few words, so I'll keep this brief. <br>
-          I like learing new tech stacks and building beautiful web apps.
+          I like learning new tech stacks and building beautiful web apps.
         </p>
         <p>Mostly active on:</p>
         <p>
