--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
       <meta name="google-site-verification" content="bltGsMxPR9SRNhWkfSGbO6VeXXwq5S7QW4Qf7MIAWo8" />
       <meta name="robots" content="INDEX , FOLLOW">
       <script type="application/ld+json">{"@context":"http://schema.org","@type":"Person","address":{"@type":"PostalAddress","streetAddress":"Shahdara","addressLocality":"Delhi","addressRegion":"Delhi","addressCountry":"India"},"email":"mailto:noeljohnson3225@gmail.com","image":"https://drive.google.com/uc?export=view&id=10HQLQFx-IE7fOExhMiNNhu_hnQbVhMq0","jobTitle":"Developer | Designer","name":"Noel Johnson","alumniOf":"Guru Gobind Singh Indraprastha University","nationality":"","url":"https://www.noeljohnson.live","sameAs":["https://www.linkedin.com/in/noel-johnson/","https://twitter.com/iamnoel1","https://github.com/noel3225","https://www.facebook.com/noel.johnson3225","https://www.instagram.com/_noel.johnson_sarkastik/"]}</script>
-      <style>
-          html{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";line-height:1.6;font-size:1rem}a{color:#007bff;text-decoration:none}img{width:40%}form{padding:5px}label{margin-top:10px}input{margin-top:5px;margin-bottom:10px;display:block}textarea{display:block}footer{margin-top:50px} button{margin-top: 10px;}
-      </style>
+      <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <header>
